# EasyRPC

./: .gitignore  LICENSE.md  README.md
C/: Dockerfile
C/EasyRPC/: EasyRPC.sln
C/EasyRPC/EasyRPC/: CMakeLists.txt  EasyRPC.vcxproj  EasyRPC.vcxproj.filters  tests.cpp  time_to_run.h
C/EasyRPC/EasyRPC/client/: easy_rpc_client.h  easy_rpc_client_connection.h  easy_rpc_client_linux_tcp.h  easy_rpc_client_linux_udp.h  easy_rpc_client_windows_tcp.h
C/EasyRPC/EasyRPC/entities/: data_info.h  easy_rpc_package.h  easy_rpc_package_base.h  easy_rpc_package_params.h  easy_rpc_package_return.h  type_data.h
C/EasyRPC/EasyRPC/package_builders/: build_package_from_client.h  build_package_from_client_or_server.h  build_package_to_client.h
C/EasyRPC/EasyRPC/server/: easy_rpc_bind.h  easy_rpc_server.h  easy_rpc_server_linux_tcp.h  easy_rpc_server_linux_udp.h  easy_rpc_server_windows_tcp.h
C/EasyRPC/TestServer/: TestServer.cpp  TestServer.vcxproj  TestServer.vcxproj.filters  easy_rpc_server_bind.h
C/EasyRPC/TestWindowsClient/: TestWindowsClient.sln
C/EasyRPC/TestWindowsClient/TestWindowsClient/: TestWindowsClient.cpp  TestWindowsClient.vcxproj  TestWindowsClient.vcxproj.filters
C/EasyRPC/Tests/: HelperBind.h  HelperClientConnection.h  Helpers.h  Main.cpp  Tests.vcxproj  Tests.vcxproj.filters  easy_rpc_remote_client.h  test_all.h  test_builded_client_function.h  test_builded_server_function.h  test_wrap.h
C/EasyRPC/TestsLinux/Client/: CMakeLists.txt  build_functions.sh  compilar.sh  easy_rpc_remote_client.h  test_client.cpp
C/EasyRPC/TestsLinux/ClientUDP/: CMakeLists.txt  compilar.sh  easy_rpc_remote_client.h  test_client.cpp
C/EasyRPC/TestsLinux/Server/: CMakeLists.txt  test_gdb.cpp  test_server  test_server.cpp
C/EasyRPC/TestsLinux/ServerUDP/: CMakeLists.txt  compilar.sh  easy_rpc_server_bind.h  test_server.cpp
C/FunctionsBuilder/: CMakeLists.txt
C/FunctionsBuilder/FunctionsBuilder/: BuildClientFunctions.h  BuildFunction.h  BuildSamples.h  BuildServerFunctions.h  CMakeLists.txt  FunctionsBuilder.cpp  FunctionsBuilder.h  InfoParams.h  ParserFunction.h  SaveContent.h  Trim.h  TypeData.h  compilar.sh
C/FunctionsBuilder/Tests/: TestBuildClientFunctions  TestBuildClientFunctions.cpp  TestBuildFunction.cpp  TestBuildServerFunctions  TestBuildServerFunctions.cpp  TestParserContent.cpp  easy_rpc_remote_client.h  easy_rpc_server_bind.h  myFuncions.h  sample_client.h  sample_server.h
Java/EasyRPCLibrary/: build.xml
Java/EasyRPCLibrary/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Java/EasyRPCLibrary/src/rafaelpm/easyrpc/client/: EasyRPCBaseCall.java  EasyRPCClientConnection.java
Java/EasyRPCLibrary/src/rafaelpm/easyrpc/client/tcp/: EasyRPCClientTCP.java
Java/EasyRPCLibrary/src/rafaelpm/easyrpc/client/udp/: EasyRPCClientUDP.java
Java/EasyRPCLibrary/src/rafaelpm/easyrpc/debug/: Chronometer.java  DebugControl.java
Java/EasyRPCLibrary/src/rafaelpm/easyrpc/entities/: DataInfo.java  EasyRPCError.java  EasyRPCPackage.java  EasyRPCPackageBase.java  TypeData.java
Java/EasyRPCLibrary/src/rafaelpm/easyrpc/packages_build/: BuildPackageFromClient.java  BuildPackageFromServer.java  BuildPackageToClient.java  BuildPackageToServer.java  StatePackage.java
Java/EasyRPCLibrary/src/rafaelpm/easyrpc/server/: ChannelClientServer.java  EasyRPCBaseBindClass.java  EasyRPCServer.java  EasyRPCServerConnection.java  EasyRPCServerParser.java  ReceiveDataFromClient.java  UglySetParam.java
Java/EasyRPCLibrary/test/build_ugly/: build_ugly_python_set_param.java
Java/EasyRPCLibrary/test/test_function/: Calc.java  TestCall.java  TestSumServer.java
Java/EasyRPCLibrary/test/test_package/: HelperFunction.java  TestBuildFromClient.java  TestBuildToClient.java
Java/Example1/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Java/Example1/src/rafaelpm/easyrpc/example1/: Calcule.java  Client.java  Server.java  Temp.java
(+9 files in other folders)
